# js50

./: LICENSE  README.md
js50c/: CMakeLists.txt  main.c
js50py/: config.py  lamp_bot.py  lamp_player.py  post_master.py  requirements.txt  requirements_2.txt  setup.py
js50py/animation_helper/: animation_functions.py  render_earth.py  sticker_pack_cache.py  weather.py  weather_icon.json
system/: auto_lamp_bot.sh  auto_lamp_player.sh  auto_lamp_pusher.sh  lamp_bot.service  lamp_player.service  lamp_pusher.service
tools/tgs/: LICENSE  README.md  cli.js  index.js  package.json
